# spinning_lidar

./: README.md
spinning_lidar/: CMakeLists.txt  package.xml
spinning_lidar_2d_mapping/: CMakeLists.txt  package.xml
spinning_lidar_description/: CMakeLists.txt  README.md  model.rviz  package.xml
spinning_lidar_description/launch/: description.launch  model.rviz  view_model.launch  view_real_sensor.launch
spinning_lidar_description/meshes/IMU/: xsens-mti30.stl
spinning_lidar_description/meshes/rotating_lidar_mount/: 2d_lidar_sensor_stand.skp  2d_lidar_sensor_stand.stl
spinning_lidar_description/urdf/: hokuyo_ust_20lx.gazebo.xacro  hokuyo_ust_20lx.urdf.xacro  rotating_lidar_mount.transmission.xacro  rotating_lidar_mount.urdf.xacro  spinning_lidar.gazebo  spinning_lidar.urdf.xacro
spinning_lidar_description/urdf/lidars/: hokuyo_ust_20lx.gazebo.xacro  hokuyo_ust_20lx.urdf.xacro
spinning_lidar_description/urdf/rotating_mounts/: rotating_mount.gazebo  rotating_mount.transmission.xacro  rotating_mount_v1.gazebo  rotating_mount_v1.transmission.xacro  rotating_mount_v1.urdf.xacro
spinning_lidar_description/urdf/rotating_mounts/v1/: rotating_mount.gazebo  rotating_mount.urdf.xacro  rotating_mount_v1.gazebo  rotating_mount_v1.transmission.xacro  rotating_mount_v1.urdf.xacro
spinning_lidar_gazebo/: CMakeLists.txt  package.xml
spinning_lidar_gazebo/include/: ir_interrupt_plugin.hpp
spinning_lidar_gazebo/launch/: simulator.launch
spinning_lidar_gazebo/src/: ir_interrupt_plugin.cpp
spinning_lidar_gazebo/worlds/: rpl_floor7_sketch.world  square_room.world
spinning_lidar_gazebo/worlds/RPL_Floor7_Sketch/: model.config  model.sdf
spinning_lidar_icpslam/: CMakeLists.txt  package.xml
spinning_lidar_icpslam/include/: geometric_utils.h
spinning_lidar_icpslam/include/icpslam/: geometric_utils.h  icp_odometer.h  loop_closure_handler.h  mapping.h  messaging_utils.h  octree_mapper.h  pose_optimizer.h  pose_optimizer_g2o.h  pose_optimizer_gtsam.h
spinning_lidar_icpslam/include/utils/: geometric_utils.h  messaging_utils.h  pose6DOF.h
spinning_lidar_icpslam/launch/: icpslam.launch  laser_assembler.launch
spinning_lidar_icpslam/src/: icpslam.cpp  interrupt_laser_assembler.cpp  lidar_scan_filtering.cpp
spinning_lidar_icpslam/src/icpslam/: icp_odometer.cpp  icpslam.cpp  loop_closure_handler.cpp  mapping.cpp  octree_mapper.cpp  odometry.cpp  pose_optimizer.cpp  pose_optimizer_g2o.cpp  pose_optimizer_gtsam.cpp
spinning_lidar_icpslam/src/laser_processing/: interrupt_laser_assembler.cpp  lidar_scan_filtering.cpp  lidar_scan_to_cloud.cpp
spinning_lidar_icpslam/src/utils/: geometric_utils.cpp  messaging_utils.cpp
spinning_lidar_icpslam/test/pcl/: test_pcl_icp.cpp
spinning_lidar_imu/: CMakeLists.txt  package.xml
spinning_lidar_launch/: CMakeLists.txt  package.xml
spinning_lidar_launch/launch/: hokuyo_urg.launch  laser_assembler.launch  lidar_tf_publisher.launch  live_sensor.launch  loam.launch  motor_control.launch  remote_sensor_handler.launch  replay_rosbag.launch  sensor_drivers.launch  simulator.launch  spinning_lidar.launch  ueye_cam.launch  view_live_sensor.launch  view_model.launch  view_rosbags.launch  visualization.launch
spinning_lidar_launch/rviz/: live_sensor.rviz  live_sensor_loam.rviz  model.rviz  sensor.rviz
spinning_lidar_loam/: CMakeLists.txt  package.xml
spinning_lidar_loam/include/: feature_extractor.hpp
spinning_lidar_loam/launch/: loam.launch
spinning_lidar_loam/src/: feature_extractor.cpp
spinning_lidar_loam/test/: test_loam_feature_extraction.cpp
spinning_lidar_mapping/: CMakeLists.txt  package.xml
spinning_lidar_mapping/include/loam/: feature_extractor.hpp
spinning_lidar_mapping/src/: lidar_scan_filtering.cpp
spinning_lidar_mapping/src/loam/: feature_extractor.cpp
spinning_lidar_mapping/test/: test_2d_cloud_gen_laserpipeline.cpp  test_assemblers_laserpipeline.cpp  test_continuous_assemblers_laserpipeline.cpp  test_pcl_ros.cpp
spinning_lidar_mapping/test/laser_pipeline/: test_2d_cloud_gen_laserpipeline.cpp
spinning_lidar_mapping/test/loam/: test_loam_feature_extraction.cpp
spinning_lidar_motor_control/: CMakeLists.txt  package.xml
spinning_lidar_motor_control/config/: controllers.yaml
spinning_lidar_motor_control/launch/: lidar_jointstates_publisher.launch  motor_control.launch  ros_control.launch
spinning_lidar_motor_control/msg/: MotorState.msg
spinning_lidar_motor_control/scripts/: serial_node.py  test_motor_control.py
spinning_lidar_motor_control/src/: lidar_jointstates_publisher.cpp  lidar_tf_publisher.cpp
spinning_lidar_motor_control/srv/: ChangeTargetVelocity.srv  TurnMotorOnOff.srv
spinning_lidar_motor_control/teensy_motor_control/: motor_control.h  ros_comm.h  teensy_motor_control.ino
spinning_lidar_utils/: CMakeLists.txt  nodelet_plugins.xml  package.xml
spinning_lidar_utils/config/: interrupt_laser_assembler.yaml  laser_range_filter.yaml  ros_laser_assembler.yaml  scan_to_cloud_converter.yaml
spinning_lidar_utils/include/: interrupt_laser_assembler_nodelet.hpp  laser_range_filter_nodelet.hpp  scan_to_cloud_converter_nodelet.hpp
spinning_lidar_utils/include/spinning_lidar_utils/: interrupt_laser_assembler.hpp  laser_range_filter.hpp  scan_to_cloud_converter.hpp
spinning_lidar_utils/launch/: laser_assembler.launch  laser_assembler_nodelets.launch  laser_assembler_nodes.launch  loam_setup.launch
spinning_lidar_utils/src/: interrupt_laser_assembler.cpp  interrupt_laser_assembler_node.cpp  interrupt_laser_assembler_nodelet.cpp  laser_range_filter_node.cpp  laser_range_filter_nodelet.cpp  lidar_scan_filtering.cpp  lidar_scan_to_cloud.cpp  scan_to_cloud_converter_node.cpp  scan_to_cloud_converter_nodelet.cpp
spinning_lidar_utils/src/spinning_lidar_utils/: interrupt_laser_assembler.cpp  laser_range_filter.cpp  scan_to_cloud_converter.cpp
spinning_lidar_utils/test/laser_pipeline/: test_2d_cloud_gen_laserpipeline.cpp  test_assemblers_laserpipeline.cpp
spinning_lidar_xsens/: 50-xsens-imu.rules  CMakeLists.txt  package.xml
spinning_lidar_xsens/launch/: xsens_driver.launch
(+18 files in other folders)
