<?xml version="1.0"?>
<package format="2">
  <name>spinning_lidar</name>
  <version>0.0.1</version>
  <description>The spinning_lidar metapackage</description>

  <author email="yoshua@kth.se">Yoshua Nava</author>
  <maintainer email="yoshua@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>spinning_lidar_description</depend>
  <depend>spinning_lidar_gazebo</depend>
  <depend>spinning_lidar_imu</depend>
  <depend>spinning_lidar_launch</depend>
  <depend>spinning_lidar_motor_control</depend>
  <depend>spinning_lidar_utils</depend>
  
  <export>
    <metapackage />
  </export>
</package>
