<?xml version="1.0"?>
<package format="2">
  <name>spinning_lidar_description</name>
  <version>0.0.1</version>
  <description>URDF robot description for custom spinning LIDAR sensor built at KTH.</description>

  <author email="yoshua@kth.se">Yoshua Nava</author>
  <maintainer email="yoshua@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
