<?xml version="1.0"?>
<package format="2">
  <name>spinning_lidar_gazebo</name>
  <version>0.0.1</version>
  <description>The spinning_lidar_gazebo package</description>

  <author email="yoshua@kth.se">Yoshua Nava</author>
  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
