<?xml version="1.0"?>
<package format="2">
  <name>spinning_lidar_motor_control</name>
  <version>0.0.0</version>
  <description>The spinning_lidar_motor_control package</description>

  <author email="yoshua@kth.se">Yoshua Nava</author>
  <author email="khudur@kth.se">Alan Khudur</author>
  <maintainer email="yoshua@kth.se">Yoshua Nava</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>	
</package>
