<?xml version="1.0"?>
<package format="2">
  <name>spinning_lidar_utils</name>
  <version>0.0.1</version>
  <description>The spinning_lidar_utils package</description>

  <author email="yoshua@kth.se">Yoshua Nava</author>
  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>gazebo_msgs</depend>
  <depend>laser_assembler</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
