<?xml version="1.0"?>
<package>
  <name>spinning_lidar_imu</name>
  <version>0.0.1</version>
  <description>The spinning_lidar_xsens package</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>
  <author email="yoshua@kth.se">Yoshua Nava</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xsens_driver</build_depend>

  <run_depend>xsens_driver</run_depend>

</package>
